--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 				box-sizing: border-box;
 				font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 				background-color: black;
+				user-select: none;
 			}
 
 			html, body{
@@ -18,8 +19,12 @@
 				margin: 0;
 			}
 			
-			#content{
+			#content, #moon{
 				text-align: center;
+			}
+
+			#side {
+				font-size: 5vw;
 			}
 			
 			#timer {
@@ -99,6 +104,8 @@
 
 			function update() {
 				document.getElementById("timer").innerHTML = formatRemaining(time);
+
+				document.getElementById("side").innerHTML = time_idx == 0 ? "🌕" : "🌑";
 			}
 			
 			window.onload = function() {
@@ -110,6 +117,9 @@
     <body onclick="start()">
 		<div id="content">
 			<span id="timer">##:##</span>
+		</div>
+		<div id="moon">
+			<span id="side">#</span>
 		</div>
 	</body>
 </html>
